; ModuleID = '/home/carl/AnghaBench/8cc/extr_gen.c_do_emit_assign_deref.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_gen.c_do_emit_assign_deref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SAVE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"mov (#rsp), #rcx\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"mov #%s, %d(#rax)\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"mov #%s, (#rax)\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"rax\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @do_emit_assign_deref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_emit_assign_deref(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @SAVE, align 4
  %7 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %8 = load i32*, i32** %3, align 8
  %9 = call i8* @get_int_reg(i32* %8, i8 signext 99)
  store i8* %9, i8** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8* %13, i32 %14)
  br label %19

16:                                               ; preds = %2
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 (i8*, ...) @emit(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i8* %17)
  br label %19

19:                                               ; preds = %16, %12
  %20 = call i32 @pop(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  ret void
}

declare dso_local i32 @emit(i8*, ...) #1

declare dso_local i8* @get_int_reg(i32*, i8 signext) #1

declare dso_local i32 @pop(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
